Re-enable integration tests for HDFS fixtures on JDK 16